@@ -3,6 +3,29 @@
 # Uninstalls BIOBASH.
 #
 source $BIOBASH_LIB/shml/shml.sh
+
+
+#--------------------------------------------------------------------
+#                             FUNCTIONS
+#--------------------------------------------------------------------
+# This pice of code was taken from: 
+#  https://unix.stackexchange.com/questions/108873/removing-a-directory-from-path
+# A response from: https://unix.stackexchange.com/users/1655/amphetamachine
+remove_from_path(){
+
+    echo "Cleaning up $1 from PATH."
+    dir_to_remove=$1
+    PATH=:$PATH:
+    while [[ $PATH = *":$dir_to_remove:"* ]]; do
+        PATH=${PATH//":$dir_to_remove:"/:}
+    done
+    # Trim off ":" from the beginning and end.
+    PATH=${PATH#:}
+    PATH=${PATH%:}
+}
+
+
+
 echo "
 "
 
@@ -42,6 +65,15 @@ if [[ $continue == "n" ]]; then
     
 elif [[ $continue == "y" ]];then
 
+
+    #Before removing BIOBASH_HOME clean path. Since installation appends BB install dir to
+    # PATH after several installs it is cluttered.
+    remove_from_path "$BIOBASH_HOME"
+    remove_from_path "$BIOBASH_BIN"
+    remove_from_path "$BIOBASH_BIN_OS"
+
+
+
     echo "
     Removing: $BIOBASH_HOME"
     rm -Rf $BIOBASH_HOME
@@ -69,7 +101,7 @@ elif [[ $continue == "y" ]];then
     fi
 else
     
-   echo "[UNKNOWN UNINSTALL ERROR CODE 2]
-   "
-   exit 1
+    echo "[UNKNOWN UNINSTALL ERROR CODE 2]
+    "
+    exit 1
 fi
